# cosmic_laucher

./: CLAUDE.md  CMakeCache.txt  CMakeLists.txt  README.md  cosmic_controller_forwarder.py  cosmic_launcher.cpp  deploy.sh  deploy_launcher.sh  game_base.hpp  lwipopts.h  menu.hpp  menu_claude_mid_edit.hpp  network_handler.hpp  wifi_config.hpp
effects/: lightning.hpp
games/: .side_scroller_game.hpp.swp  animated_eyes.hpp  arcade_racer_game.hpp  frogger_game.hpp  halloween_game.hpp  halloween_game_v0.hpp  halloween_game_v1.hpp  halloween_game_v2.hpp  qix_game.hpp  shader_effects_game.hpp  shader_effects_game_v0.hpp  side_scroller_game.hpp  tetris_game.hpp
games/halloween_scenes/: stormy_night_scene.hpp  woodland_path_scene.hpp  woodland_themes.json
